terraform/01-foundation/kubernetes/workload-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: block2-app
